second_template/rest-template-svc-new.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/elb.autocreate: '{"type":"public","bandwidth_name":"cce-bandwidth-1632310175221","bandwidth_chargemode":"traffic","bandwidth_size":5,"bandwidth_sharetype":"PER","eip_type":"5_bgp"}'
    kubernetes.io/elb.class: union
    kubernetes.io/elb.enterpriseID: "0"
    kubernetes.io/elb.health-check-flag: "on"
    kubernetes.io/elb.health-check-option: '{"protocol":"TCP","delay":"5","timeout":"10","max_retries":"3"}'
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: rest-template1
  name: rest-template1-svc-new
  namespace: 
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: default-http-backend
    port: 8081
  selector:
    app: rest-template1
  sessionAffinity: None
  type: LoadBalancer
