second_template/template1-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisapp
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:4-32bit
        resources:
          requests:
            cpu: 200m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redisapp
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: template1app
  labels:
    app: template1
spec:
  selector:
    matchLabels:
      app: template1
  replicas: 5
  template:
    metadata:
      labels:
        app: template1
    spec:
      containers:
      - name: template1
        image: swr.ru-moscow-1.hc.sbercloud.ru/sber/template1
        resources:
          requests:
            cpu: 25m
            memory: 50Mi
          limits:
            cpu: 150m
            memory: 150Mi
        ports:
        - containerPort: 8080
  strategy:
    canary:
      stableService: template1stable
      canaryService: template1-canary
      #trafficRouting:
        #nginx:
          #stableIngress: realtimeapp-ingress
      steps:
      - setWeight: 50
      - pause: {}
---
apiVersion: v1
kind: Service
metadata:
  name: template1-stable
  labels:
    app: template1
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: template1
---
apiVersion: v1
kind: Service
metadata:
  name: template1-canary
  labels:
    app: template1
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: template1
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: template1-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
spec:
  rules:
  - host: real.template1.info
    http:
      paths:
      - path: /
        backend:
          serviceName: realtimeapp-stable
          servicePort: 80
